k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: client:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: http
      port: 3000
      targetPort: http
