k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: comments:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4001
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: http
      port: 4001
      targetPort: http
