k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: event-bus:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4005
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: http
      port: 4005
      targetPort: http
