k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: moderation:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4003
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: http
      port: 4003
      targetPort: http
