k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: posts:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: http
      port: 4000
      targetPort: http
