k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: query:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4002
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: http
      port: 4002
      targetPort: http
